cros: Drag to bezel should close.

Two small fixes in this CL with accompanying tests.

1. Dragging the launcher to within the bezel margin should close the
launcher. It was implemented incorrectly and is now working. verified
with a new test!

2. New Ux Behavior: Flinging the launcher down from any state should
close it. Verified with a new test!

Bug: 742542
Change-Id: I244dbb841d030f8028431de9ef50b34cb4566d54
Reviewed-on: https://chromium-review.googlesource.com/629197
Reviewed-by: Xiyuan Xia <xiyuan@chromium.org>
Commit-Queue: Alex Newcomer <newcomer@chromium.org>
Cr-Commit-Position: refs/heads/master@{#496776}
Former-commit-id: 63b5efdda6e5c9b491880e15c79ca7157a7fbb21